--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -18,6 +18,4 @@ Library
   Build-Depends:       base<5, ty
   Exposed-Modules:     
                        LambdaCCC.AsCCC
-
-
-
+                       LambdaCCC.ShowUtils
