AsCCC --> ToCCC, asCCC --> toCCC; PatternGuards (needed before GHC 7.6)

--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -17,5 +17,5 @@ Library
   Include-Dirs:        src
   Build-Depends:       base<5, ty
   Exposed-Modules:     
-                       LambdaCCC.AsCCC
+                       LambdaCCC.ToCCC
                        LambdaCCC.ShowUtils
