Initial HERMIT plugin, behaves like default interactive HERMIT

--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -15,8 +15,11 @@ build-type:          Simple
 Library
   hs-Source-Dirs:      src
   Include-Dirs:        src
-  Build-Depends:       base<5, ty
-  Exposed-Modules:     
+  Build-Depends:       base < 5, 
+                       ghc >= 7.6,
+                       hermit >= 0.1.8.0, 
+                       ty
+  Exposed-Modules:     LambdaCCC
                        LambdaCCC.Misc
                        LambdaCCC.ShowUtils
                        LambdaCCC.Ty
