--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ out/
 # Where do these files come from?  They're not readable.
 # For instance, .#Help.page
 .#*
+
+# vim swap files
+*.swp
+*.swo
+
+*.hi
+*.o
