Skeleton of conversion rewrites.

--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -18,6 +18,7 @@ Library
   Build-Depends:       base < 5, 
                        ghc >= 7.6,
                        hermit >= 0.1.8.0, 
+                       template-haskell,
                        ty
   Exposed-Modules:     LambdaCCC
                        LambdaCCC.Misc
