Added CoreShow from CLasH, with several tweaks for GHC 7.6.

--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -28,7 +28,10 @@ Library
                        LambdaCCC.Lambda
                        LambdaCCC.CCC
                        LambdaCCC.ToCCC
+                       LambdaCCC.FunCCC
+                       LambdaCCC.Core
                        LambdaCCCDemo.Reify
                        LambdaCCCDemo.Embedding
+                       CLasH.Utils.Core.CoreShow
   Other-Modules:
                        LambdaCCC.Tests
