remove diagnostics ; introduce evalE in rewrite.

--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -17,6 +17,7 @@ Library
   Include-Dirs:        src
   Build-Depends:       base < 5,
                        ghc >= 7.6,
+                       ghc-prim,
                        hermit >= 0.1.8.0,
                        template-haskell,
                        containers,
