Using new simplified mkStringExpr

--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -32,6 +32,7 @@ Library
                        LambdaCCC.ToCCC
                        LambdaCCC.FunCCC
                        LambdaCCC.Core
+                       LambdaCCC.MkStringExpr
                        LambdaCCC.ReifyLambda
                        LambdaCCCDemo.Reify
                        LambdaCCCDemo.Embedding
