--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -29,7 +29,8 @@ Library
                   , containers
                   , constraints
 --                  , kure >= 2.14.0
-                  , hermit >= 0.3.2.0
+--                   , hermit >= 0.3.2.0 && < 0.4.0.0
+                  , hermit >= 0.4.0.0
                   , ty >= 0.1.5
                   , circat >= 0.2.4
   Exposed-Modules:  LambdaCCC.Misc
@@ -41,7 +42,7 @@ Library
                     LambdaCCC.ToCCC
                     LambdaCCC.MkStringExpr
                     LambdaCCC.ReifyLambda
-                    LambdaCCC.ToCircuit
+--                     LambdaCCC.ToCircuit
 
 
 -- TODO: trim
