--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -29,6 +29,7 @@ Library
                   , template-haskell
                   , containers
                   , constraints
+                  , kure
                   , hermit >= 0.4.0.0
                   , ty >= 0.1.5
                   , circat >= 0.2.7
@@ -41,6 +42,7 @@ Library
                     LambdaCCC.ToCCC
                     LambdaCCC.MkStringExpr
                     LambdaCCC.ReifyLambda
+                    LambdaCCC.Reify
 
 --                     LambdaCCC.ToCircuit
 
