Working on Vec support; reifyRulesPrefix

--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -31,6 +31,7 @@ Library
                   , kure >= 2.16.0
                   , hermit >= 0.4.0.0
                   , ty >= 0.1.5
+                  , type-unary >= 0.2.16
                   , circat >= 0.2.7
                   , hermit-extras >= 0.1
                   , type-encode
