Lots of progress with Vec. starting with tree.

--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -44,6 +44,7 @@ Library
                     LambdaCCC.CCC
                     LambdaCCC.ToCCC
                     LambdaCCC.Reify
+                    LambdaCCC.Run
 
 --                     LambdaCCC.Ty
 --                     LambdaCCC.MkStringExpr
