Working on new reify

--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -47,6 +47,7 @@ Library
                     LambdaCCC.Reify
                     LambdaCCC.SReify
                     LambdaCCC.Run
+                    LambdaCCC.Examples.Linear
 
 -- I'll drop one of Reify & SReify later
 
