--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -46,6 +46,7 @@ Library
                     LambdaCCC.Encode
                     LambdaCCC.Reify
                     LambdaCCC.SReify
+                    LambdaCCC.Standard
                     LambdaCCC.Run
                     LambdaCCC.Examples.Linear
 
