update for HERMIT.Extras tweaks

--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -45,8 +45,8 @@ Library
                     LambdaCCC.CCC
                     LambdaCCC.ToCCC
                     LambdaCCC.Encode
---                     LambdaCCC.Reify
---                     LambdaCCC.SReify
+                    LambdaCCC.Reify
+                    LambdaCCC.SReify
 
                     LambdaCCC.NormalizeCore
                     LambdaCCC.CoreEncode
