--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -49,6 +49,7 @@ Library
                     LambdaCCC.Monomorphize
 --                     LambdaCCC.TransCode
 --                     LambdaCCC.Standardize
+                    LambdaCCC.Rep
                     LambdaCCC.CoerceEncode
                     LambdaCCC.Run
 --                     LambdaCCC.Examples.Linear
