--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -49,7 +49,8 @@ Library
                     LambdaCCC.Monomorphize
 --                     LambdaCCC.TransCode
 --                     LambdaCCC.Standardize
-                    LambdaCCC.CoerceEncode
+--                     LambdaCCC.CoerceEncode
+--                     LambdaCCC.Recastable
                     LambdaCCC.Run
 --                     LambdaCCC.Examples.Linear
 -- Phasing out:
