--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -22,7 +22,7 @@ source-repository head
   location:         git://github.com/conal/lambda-ccc
 
 Library
-  hs-Source-Dirs:   src
+  hs-Source-Dirs:   src/
   Build-Depends:    base < 5
                   , ghc >= 7.6
                   , ghc-prim
