--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -52,6 +52,8 @@ Library
 --                     LambdaCCC.CoerceEncode
 --                     LambdaCCC.Recastable
                     LambdaCCC.Run
+                    LambdaCCC.Adder
+
 --                     LambdaCCC.Examples.Linear
 -- Phasing out:
 
