--- a/lambda-ccc.cabal
+++ b/lambda-ccc.cabal
@@ -1,5 +1,5 @@
 Name:               lambda-ccc
-Version:            0.4
+Version:            0.5
 Cabal-Version:      >= 1.8
 Synopsis:           Convert lambda expressions to CCC combinators
 Category:           language
@@ -34,7 +34,7 @@ Library
                   , hermit >= 0.5.0.1
                   , ty >= 0.1.5
                   , type-unary >= 0.2.16
-                  , circat >= 0.3
+                  , circat >= 0.5
                   , hermit-extras >= 0.2
                   , MemoTrie
 
@@ -42,7 +42,7 @@ Library
 
   Exposed-Modules:  LambdaCCC.Misc
                     LambdaCCC.ShowUtils
-                    LambdaCCC.Prim
+--                     LambdaCCC.Prim
                     LambdaCCC.Lambda
                     LambdaCCC.CCC
                     LambdaCCC.ToCCC
