doit, reify, no-reify

--- a/test/makefile
+++ b/test/makefile
@@ -1,3 +1,9 @@
-default:
+doit:
 	time hermit TreeTest.hs -v0 -opt=LambdaCCC.Monomorphize DoTree.hss resume && ./TreeTest
+
+reify:
+	hermit TreeTest.hs -v0 -opt=LambdaCCC.Monomorphize DoTree.hss
+
+no-reify:
+	hermit TreeTest.hs -v0 -opt=LambdaCCC.Monomorphize DoTreeNoReify.hss
 
