reify-continue, no-reify-continue

--- a/test/makefile
+++ b/test/makefile
@@ -2,8 +2,14 @@ doit:
 	time hermit TreeTest.hs -v0 -opt=LambdaCCC.Monomorphize DoTree.hss resume && ./TreeTest
 
 reify:
-	hermit TreeTest.hs -v0 -opt=LambdaCCC.Monomorphize DoTree.hss
+	echo "" | make reify-continue ; echo
 
 no-reify:
+	echo "" | make no-reify-continue ; echo
+
+reify-continue:
+	hermit TreeTest.hs -v0 -opt=LambdaCCC.Monomorphize DoTree.hss
+
+no-reify-continue:
 	hermit TreeTest.hs -v0 -opt=LambdaCCC.Monomorphize DoTreeNoReify.hss
 
