--- a/test/makefile
+++ b/test/makefile
@@ -1,5 +1,7 @@
+HERM = hermit TreeTest.hs -v0 -opt=LambdaCCC.Monomorphize
+
 doit:
-	time hermit TreeTest.hs -v0 -opt=LambdaCCC.Monomorphize DoTree.hss resume && ./TreeTest
+	time $(HERM) DoTree.hss resume && ./TreeTest
 
 reify:
 	echo "" | make reify-continue ; echo
@@ -8,8 +10,13 @@ no-reify:
 	echo "" | make no-reify-continue ; echo
 
 reify-continue:
-	hermit TreeTest.hs -v0 -opt=LambdaCCC.Monomorphize DoTree.hss
+	$(HERM) DoTree.hss
 
 no-reify-continue:
-	hermit TreeTest.hs -v0 -opt=LambdaCCC.Monomorphize DoTreeNoReify.hss
+	$(HERM) DoTreeNoReify.hss
 
+dont:
+	$(HERM) Dont.hss
+
+foo:
+	$(HERM) Foo.hss
