--- a/test/Makefile
+++ b/test/Makefile
@@ -4,16 +4,34 @@ go:	Examples
 	./Examples
 
 play:
-	hermit Examples.hs -v0 -opt=LambdaCCC.Interactive Go.hss
+	hermit Examples.hs -v0 -opt=LambdaCCC.Interactive Play.hss
 
-# %.o: ../dist $*.hs
-# 	ghc $*.hs
+goZ:    Z
+	./Z
+
+Z:      ../dist Z.hs Makefile
+	ghc -O -fforce-recomp -fplugin=LambdaCCC.Plugin -package circat Z
+
+# ghc -O -fplugin=LambdaCCC.Plugin -fplugin-opt=LambdaCCC.Reify:verbose -dppr-case-as-let -dsuppress-idinfo -dcore-lint V
+
+playR:
+	hermit R.hs -v0 -opt=LambdaCCC.Interactive Play.hss
+
+playZ:
+	hermit Z.hs -v0 -opt=LambdaCCC.Interactive Play.hss -- -package circat
+
+-- gf: ../dist G.hs F.hs G.iface F.iface Makefile
+
+g:
+	ghc G.hs
 
 Examples: ../dist Examples.hs Makefile
-	time ghc Examples.hs -fforce-recomp -fplugin=LambdaCCC.Plugin -O -dcore-lint # -fsimpl-tick-factor=400
+	time ghc -O -fforce-recomp -fplugin=LambdaCCC.Plugin Examples
+
+# 	time ghc -O Examples.hs -fforce-recomp -fplugin=LambdaCCC.Plugin -dcore-lint
 
 X: ../dist X.hs Makefile
-	time ghc X.hs -fforce-recomp -fplugin=LambdaCCC.Plugin -O -dcore-lint # -fsimpl-tick-factor=400
+	time ghc X.hs -fforce-recomp -fplugin=LambdaCCC.Plugin -O -dcore-lint
 
 goX:	X
 	./X
@@ -21,19 +39,11 @@ goX:	X
 # 
 # -ddump-simpl -ddump-simpl-stats -ddump-to-file 
 
-# For and :: RTRee N10 Bool -> Bool
-#
-# ghc: panic! (the 'impossible' happened)
-#   (GHC version 7.10.3 for x86_64-apple-darwin):
-# 	Simplifier ticks exhausted
-#   When trying UnfoldingDone $dGenBuses_aaXT
-#   To increase the limit, use -fsimpl-tick-factor=N (default 100)
-#   If you need to do this, let GHC HQ know, and what factor you needed
-#   To see detailed counts use -ddump-simpl-stats
-#   Total ticks: 151525
+%.hi %.o: ../dist %.hs
+	ghc $*.hs
 
-# Why the -fforce-recomp? I guess GHC doesn't notice that the plugin has
-# changed. Odd, since it does seem notice when cabal-installing.
+%.iface: %.hi
+	ghc --show-iface $*.hi > $*.iface
 
 compile:
 	cd .. ; make
